# MajGame-Auto-Reviewer

./: .gitignore  LICENSE  README.md  requirements.txt
Maj-bot/: .env
Maj-bot/Maj-bot/plugins/get_pt/: __init__.py  get_mspt.py
Maj-bot/Maj-bot/plugins/weather/: __init__.py  get_weather.py
nonebot/Maj-bot/: bot.py  pyproject.toml
src/bot/: .env  restart.sh  start.sh  stop.sh  wkhtmltox_0.12.6-1.focal_amd64.deb  wkhtmltox_0.12.6-1.focal_amd64.deb.1
src/bot/Maj-bot/plugins/get_maj_match_res/: __init__.py  config.json  get_maj_match_res.py  utils.py
src/bot/Maj-bot/plugins/get_pt/: __init__.py  get_mspt.py  get_thpt.py
src/bot/Maj-bot/plugins/restart/: __init__.py
src/bot/Maj-bot/plugins/setu/: __init__.py  get_setu.py
src/web/: main.py
